
public static class ConstantValue
{
    public const string PlayerTag = "Player";

    // ANIMATION
    public const string WalkParam = "isWalk";
    public const string RunParam = "isRun";
    public const string JumpParam = "Jump";

    // CAMERA
    public const string ThirdPerson = "ThirdPersonCamera";
    public const string FirstPerson = "FirstPersonCamera";
    public const string FrontPerson = "FrontPersonCamera";
}
